:bug: fix image alignment on ie

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -144,9 +144,6 @@ section {
         display: inline-block;
         position: relative;
         overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
 
         &.single {
             &-width {
@@ -170,13 +167,13 @@ section {
 
         &.limit-height {
             img {
-                max-height: 100%;
+                height: 100%;
             }
         }
 
         &.limit-width {
             img {
-                max-width: 100%;
+                width: 100%;
             }
         }
 
@@ -211,6 +208,7 @@ section {
             right: 0;
             background-color: transparentize(#000, .25);
             opacity: 0;
+            z-index: 1;
         }
 
         .overlay-text {
@@ -221,6 +219,14 @@ section {
             transform: translateY(-50%);
             color: inherit;
             opacity: 0;
+            z-index: 1;
+        }
+
+        img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
 }
@@ -238,4 +244,5 @@ nav {
 .load-reveal {
     opacity: 0;
     transform: translateY(100px) scale(.9);
+    transform-origin: center;
 }
